<!-- Author: Praveen Ramesh-->
<!-- Andrew ID: pramesh2@andrew.cmu.edu-->
<resources>
    <!-- The name of the app -->
    <string name="app_name">MovieMate</string>

    <!-- Search a Movie section -->
    <string name="search_heading">Search a Movie</string>
    <string name="description">Enter a movie name to search.</string>
    <string name="search_submit">Submit</string>
    <string name="search_title">TitleView</string>
    <string name="search_overview">Overview</string>
    <string name="search_release_date">ReleaseDate</string>

    <!-- Suggest a Movie section -->
    <string name="suggest_heading">Suggest a Movie</string>
    <string name="suggest_submit">Submit</string>
    <string name="suggest_title">TitleView</string>
    <string name="suggest_rating">Rating</string>

    <!-- Action settings label -->
    <string name="action_settings">Action</string>
    <!-- Movie genres array -->
    <string-array name="movie_genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
</resources>